--- a/Arpa0/Arpa0.vcxproj.filters
+++ b/Arpa0/Arpa0.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Arpa0.cpp">
+    <ClCompile Include="proyecto1.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
