--- a/Arpa0/Arpa0.vcxproj
+++ b/Arpa0/Arpa0.vcxproj
@@ -143,7 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Arpa0.cpp" />
+    <ClCompile Include="proyecto1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
